[tool.poetry]
name = "custon-tools-calado"
version = "0.1.0"
description = ""
authors = ["Felipph Calado <luiz.calado@mpc.pa.gov.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.13.1"
setuptools = "^75.3.0"
undetected-chromedriver = "^3.5.5"
cloudscraper = "^1.2.71"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
